# sider-screenshot

./: .env.development  .gitignore  biome.json  build.ps1  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.prod.json
src-tauri/benches/: enum_windows_benchmark.rs
src-tauri/capabilities/: default.json  websearch.json
src-tauri/crates/tauri-plugin-web-search/: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
src-tauri/crates/tauri-plugin-web-search/guest-js/: dom-ready.ts  event.ts  index.ts  lazyPromise.ts  proxy_channel.ts  searchEngine.ts  service.ts  types.ts
src-tauri/crates/tauri-plugin-web-search/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-web-search/permissions/autogenerated/commands/: create_search_window.toml  load_url.toml  remove_search_window.toml
src-tauri/crates/tauri-plugin-web-search/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-web-search/src/: commands.rs  lib.rs  search_window.rs
src-tauri/icons/: icon.icns
src-tauri/src/: constant.rs  contant.rs  enum_windows.rs  lib.rs  main.rs
src-tauri/src/quick_search/: mod.rs
src-tauri/src/sider/: capture.rs  command.rs  mod.rs
src-tauri/src/windows/: image_clipboard.rs  mod.rs
src/api/: index.ts
src/app/: types.ts
src/app/quick-start/: QsMatchText.tsx  QuickStart.tsx  match.ts  quick-start.css
src/app/root/: MarkDownRender.tsx  Root.tsx
src/app/screenshot/: ScreenShot.tsx  ScreenShotCanvas.tsx  capture.ts  screenshot.css  types.ts
src/app/screenshot/components/: ScreenShotToolbar.tsx
src/components/MarkDownRender/: MarkDownRender.tsx  markdown-render.module.scss
src/hooks/: useBaseApi.ts
src/utils/: async_queue.ts  index.ts  request.ts
