[package]
name = "sider-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sider_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sider-local-ai = { path = "C:/Users/xly_t/Krysha/Code/Projects/Sider/sider-local-ai" }
display-info = "0.5.2"
clipboard-win = "5.4.0"
# clipboard-rs = { git = "https://github.com/horou-dsk/clipboard-rs.git", branch = "fix/win_image" }
image = "0.25"
anyhow = "1"
base64 = "0.22"
tauri-plugin-dialog = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Graphics_Imaging",
    "Media_Ocr",
    "Foundation",
    "Globalization",
    "Storage",
    "Storage_Streams",
    "Win32_System_DataExchange",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "enum_windows_benchmark"
harness = false

[profile.release]
lto = true
